use partial-collapse in student_events_overview.html
We need jquery.js and bootstrap.js for this to work.
Also, the HTML elements' ids needs to be different for each item.

--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -6,9 +6,17 @@
     <title>Java in der Praxis</title>
     <th:block th:fragment="headcontent">
         <!-- Links, Skripts, Styles hier einfügen! -->
+        <script src="../js/jquery.min.js"
+                th:src="@{/js/jquery.min.js}"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                th:src="@{/js/bootstrap.min.js}"></script>
+        <link rel="stylesheet" type="text/css"
+              href="../css/partial_collapse.css"
+              th:href="@{/css/partial_collapse.css}">
         <ul>
             <li>
-                <a th:href="@{/rheinjug2/student/events}"><span class="icono-leftArrow icono-"></span> zurück zu Übersicht</a>
+                <a th:href="@{/rheinjug2/student/events}"><span class="icono-leftArrow icono-"></span> zurück zu
+                    Übersicht</a>
             </li>
             <li>
                 <a th:href="@{/rheinjug2/student/events}"> Veranstaltugen Übersicht </a>
@@ -46,10 +54,10 @@
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
-    <div>
+    <div id="partial-collapse">
         <div class="container bg-light rounded shadow-lg " style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
-            <div class="row border-bottom  mx-1 my-1">
-                <div class="col-6 col-sm-3  border-right text-secondary my-1">
+            <div class="row border-bottom mx-1 my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <i class="icono-calendar"></i>
@@ -57,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right  text-secondary my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <span class="icono-clock"></span>
@@ -65,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right my-1">
+                <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
                             <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
@@ -82,14 +90,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row border-bottom  mx-1 my-1 align-content-center">
-                <div class="col-12 text-secondary text-center  my-1">
+            <div class="row border-bottom mx-1 my-1 align-content-center">
+                <div class="col-12 text-secondary text-center my-1">
                     <h2 class="font-weight-bold">
                         Double Feature: Webanwendungen mit MVC 1.0 / Typparameter
                     </h2>
                 </div>
             </div>
-            <div class="row border-bottom   text-light mx-1 ">
+            <div class="row border-bottom text-light mx-1 ">
                 <div class=" container col-12 my-2">
                     <div class="text-secondary justify-content-start">
                         <h3 class="font-weight-bold">
@@ -97,34 +105,41 @@
                         </h3>
                     </div>
                     <div class="text-secondary">
-
-                        <p>
-                            Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server
-                            Pages
-                            (JSP)
-                            und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die Anforderungen
-                            an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0
-                            soll
-                            dieses Problem gelöst.
-                        </p>
+                        <div id="description-1" class="collapse partial-collapse" aria-expanded="false">
+                            <p>
+                                Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java
+                                Server
+                                Pages
+                                (JSP)
+                                und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
+                                Anforderungen
+                                an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
+                                1.0
+                                soll
+                                dieses Problem gelöst.
+                            </p>
+                        </div>
+                        <a role="button" class="collapsed" data-toggle="collapse" href="#description-1"
+                           aria-expanded="false"
+                           aria-controls="description-1"></a>
                     </div>
                 </div>
             </div>
             <div class=" row border-bottom mx-1 my-1 align-content-center justify-content-center">
-                <div class="col-12 text-secondary  text-small my-1">
+                <div class="col-12 text-secondary text-small my-1">
                     <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
             <div class="row text-light justify-content-around mx-1 ">
-                <div class="col-12 col-sm-3 col-md-4  mt-2">
+                <div class="col-12 col-sm-3 col-md-4 mt-2">
                     <form action="#" method="POST">
                         <button class="btn btn-outline-secondary btn-block" type="submit">
                             anmelden
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-sm-5  col-md-4 mt-2">
+                <div class="col-12 col-sm-5 col-md-4 mt-2">
                     </form>
                     <form action="#" method="POST">
                         <div>
@@ -148,8 +163,8 @@
 
         <div class="container bg-light rounded shadow-lg "
              style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
-            <div class="row border-bottom  mx-1 my-1">
-                <div class="col-6 col-sm-3  border-right text-secondary my-1">
+            <div class="row border-bottom mx-1 my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <i class="icono-calendar"></i>
@@ -157,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right  text-secondary my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <span class="icono-clock"></span>
@@ -165,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right my-1">
+                <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
                             <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
@@ -182,14 +197,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row border-bottom  mx-1 my-1 align-content-center">
-                <div class="col-12 text-secondary text-center  my-1">
+            <div class="row border-bottom mx-1 my-1 align-content-center">
+                <div class="col-12 text-secondary text-center my-1">
                     <h2 class="font-weight-bold">
                         Double Feature: Webanwendungen mit MVC 1.0 / Typparameter
                     </h2>
                 </div>
             </div>
-            <div class="row border-bottom   text-light mx-1 ">
+            <div class="row border-bottom text-light mx-1 ">
                 <div class=" container col-12 my-2">
                     <div class="text-secondary justify-content-start">
                         <h3 class="font-weight-bold">
@@ -197,32 +212,37 @@
                         </h3>
                     </div>
                     <div class="text-secondary">
-                        <p>
-                            Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java
-                            Server Pages (JSP)
-                            und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
-                            Anforderungen
-                            an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
-                            1.0 soll dieses Problem gelöst
-                        </p>
+                        <div id="description-2" class="collapse partial-collapse" aria-expanded="false">
+                            <p>
+                                Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java
+                                Server Pages (JSP)
+                                und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
+                                Anforderungen
+                                an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
+                                1.0 soll dieses Problem gelöst
+                            </p>
+                        </div>
+                        <a role="button" class="collapsed" data-toggle="collapse" href="#description-2"
+                           aria-expanded="false"
+                           aria-controls="description-2"></a>
                     </div>
                 </div>
             </div>
-            <div class="row border-bottom  mx-1 my-1 align-content-center justify-content-center">
-                <div class="col-12 text-secondary  text-small my-1">
+            <div class="row border-bottom mx-1 my-1 align-content-center justify-content-center">
+                <div class="col-12 text-secondary text-small my-1">
                     <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
             <div class="row text-light justify-content-around mx-1 ">
-                <div class="col-12 col-sm-4 col-md-4  mt-2">
+                <div class="col-12 col-sm-4 col-md-4 mt-2">
                     <form action="#" method="POST">
                         <button class="btn btn-outline-danger btn-block" disabled type="submit">
                             Anmeldung nicht mehr möglich
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-sm-5  col-md-4 mt-2">
+                <div class="col-12 col-sm-5 col-md-4 mt-2">
                     </form>
                     <form action="#" method="POST">
                         <div>
@@ -244,8 +264,8 @@
         </div>
         <div class="container bg-light rounded shadow-lg "
              style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
-            <div class="row border-bottom  mx-1 my-1">
-                <div class="col-6 col-sm-3  border-right text-secondary my-1">
+            <div class="row border-bottom mx-1 my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <i class="icono-calendar"></i>
@@ -253,7 +273,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right  text-secondary my-1">
+                <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
                             <span class="icono-clock"></span>
@@ -261,7 +281,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-3  border-right my-1">
+                <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
                             <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;">
@@ -278,14 +298,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row border-bottom  mx-1 my-1 align-content-center">
-                <div class="col-12 text-secondary text-center  my-1">
+            <div class="row border-bottom mx-1 my-1 align-content-center">
+                <div class="col-12 text-secondary text-center my-1">
                     <h2 class="font-weight-bold">
                         Double Feature: Webanwendungen mit MVC 1.0 / Typparameter
                     </h2>
                 </div>
             </div>
-            <div class="row border-bottom   text-light mx-1 ">
+            <div class="row border-bottom text-light mx-1 ">
                 <div class=" container col-12 my-2">
                     <div class="text-secondary justify-content-start">
                         <h3 class="font-weight-bold">
@@ -293,33 +313,38 @@
                         </h3>
                     </div>
                     <div class="text-secondary">
-                        <p>
-                            Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java
-                            Server Pages (JSP)
-                            und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
-                            Anforderungen
-                            an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
-                            1.0 soll dieses Problem gelöst
-                            <werden class=""></werden>
-                        </p>
+                        <div id="description-3" class="collapse partial-collapse" aria-expanded="false">
+                            <p>
+                                Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java
+                                Server Pages (JSP)
+                                und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
+                                Anforderungen
+                                an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
+                                1.0 soll dieses Problem gelöst
+                                <werden class=""></werden>
+                            </p>
+                        </div>
+                        <a role="button" class="collapsed" data-toggle="collapse" href="#description-3"
+                           aria-expanded="false"
+                           aria-controls="description-3"></a>
                     </div>
                 </div>
             </div>
-            <div class="row border-bottom  mx-1 my-1 align-content-center justify-content-center">
-                <div class="col-12 text-secondary  text-small my-1">
+            <div class="row border-bottom mx-1 my-1 align-content-center justify-content-center">
+                <div class="col-12 text-secondary text-small my-1">
                     <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
             <div class="row text-light justify-content-around mx-1 ">
-                <div class="col-12 col-sm-4 col-md-4  mt-2">
+                <div class="col-12 col-sm-4 col-md-4 mt-2">
                     <form action="#" method="POST">
                         <button class="btn btn-outline-secondary btn-block" type="submit">
                             anmelden
                         </button>
                     </form>
                 </div>
-                <div class="col-12 col-sm-5  col-md-4 mt-2">
+                <div class="col-12 col-sm-5 col-md-4 mt-2">
                     </form>
                     <form action="#" method="POST">
                         <div>
