blueprint for checking submits for creditpoints

--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -70,7 +70,7 @@
             </tbody>
         </table>
         <div class="alert alert-danger text-center">
-            CP Beantragung ist noch nicht möglich. sie brauchen mindestens <sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
+            CP Beantragung ist noch nicht möglich. Sie brauchen mindestens <sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
         </div>
     </div>
 </main>
