--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -27,6 +27,11 @@
 </header>
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
+    <form action="#" method="POST" th:action="@{/rheinjug2/orga/events}">
+        <button class="btn btn-outline-secondary btn-block" type="submit">
+            Veranstaltungen aktualisieren
+        </button>
+    </form>
     <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
     <div th:remove="all-but-first" th:each="event : ${events}">
         <div class="container bg-light rounded shadow-lg " style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
