--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -6,12 +6,17 @@
     <title>Java in der Praxis</title>
     <th:block th:fragment="headcontent">
         <!-- Links, Skripts, Styles hier einfügen! -->
-        <script src="../js/jquery.min.js"
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous"
+              th:remove="all">
+        <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
+        <script src="../../static/js/jquery.min.js"
                 th:src="@{/js/jquery.min.js}"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
                 th:src="@{/js/bootstrap.min.js}"></script>
         <link rel="stylesheet" type="text/css"
-              href="../css/partial_collapse.css"
+              href="../../static/css/partial_collapse.css"
               th:href="@{/css/partial_collapse.css}">
         <ul>
             <li>
@@ -76,7 +81,9 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
-                            <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-credit-points.png"
+                                 th:src="@{/icons/icon-credit-points.png}"
+                                 style="width: 32px;height: 28px;">
                             <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                         </div>
                     </div>
@@ -84,7 +91,9 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row">
                         <div class="col-12">
-                            <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-payment.png"
+                                 th:src="@{/icons/icon-payment.png}"
+                                 style="width: 32px;height: 28px;">
                             <span class="text-success">&nbsp;kostenfrei</span>
                         </div>
                     </div>
@@ -116,7 +125,7 @@
                                 an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
                                 1.0
                                 soll
-                                dieses Problem gelöst.
+                                dieses Problem gelöst werden.
                             </p>
                         </div>
                         <a role="button" class="collapsed" data-toggle="collapse" href="#description-1"
@@ -127,7 +136,9 @@
             </div>
             <div class=" row border-bottom mx-1 my-1 align-content-center justify-content-center">
                 <div class="col-12 text-secondary text-small my-1">
-                    <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
+                    <img src="../../static/icons/icon-location.png"
+                         th:src="@{/icons/icon-location.png}"
+                         style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
@@ -183,7 +194,8 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
-                            <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-credit-points.png"
+                                 th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                             <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span>
                         </div>
                     </div>
@@ -191,7 +203,9 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row">
                         <div class="col-12">
-                            <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-payment.png"
+                                 th:src="@{/icons/icon-payment.png}"
+                                 style="width: 32px;height: 28px;">
                             <span class="text-success">&nbsp;kostenfrei</span>
                         </div>
                     </div>
@@ -219,7 +233,7 @@
                                 und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
                                 Anforderungen
                                 an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
-                                1.0 soll dieses Problem gelöst
+                                1.0 soll dieses Problem gelöst werden.
                             </p>
                         </div>
                         <a role="button" class="collapsed" data-toggle="collapse" href="#description-2"
@@ -230,7 +244,9 @@
             </div>
             <div class="row border-bottom mx-1 my-1 align-content-center justify-content-center">
                 <div class="col-12 text-secondary text-small my-1">
-                    <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
+                    <img src="../../static/icons/icon-location.png"
+                         th:src="@{/icons/icon-location.png}"
+                         style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
@@ -284,7 +300,9 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row ">
                         <div class="col-12">
-                            <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-credit.png"
+                                 th:src="@{/icons/icon-credit.png}"
+                                 style="width: 32px;height: 28px;">
                             <span class="text-secondary"> <sup>1</sup>/<sub>6</sub> CP</span>
                         </div>
                     </div>
@@ -292,7 +310,9 @@
                 <div class="col-6 col-sm-3 border-right my-1">
                     <div class="row">
                         <div class="col-12">
-                            <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
+                            <img src="../../static/icons/icon-payment.png"
+                                 th:src="@{/icons/icon-payment.png}"
+                                 style="width: 32px;height: 28px;">
                             <span class="text-success">&nbsp;kostenfrei</span>
                         </div>
                     </div>
@@ -320,8 +340,7 @@
                                 und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
                                 Anforderungen
                                 an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
-                                1.0 soll dieses Problem gelöst
-                                <werden class=""></werden>
+                                1.0 soll dieses Problem gelöst werden.
                             </p>
                         </div>
                         <a role="button" class="collapsed" data-toggle="collapse" href="#description-3"
@@ -332,7 +351,9 @@
             </div>
             <div class="row border-bottom mx-1 my-1 align-content-center justify-content-center">
                 <div class="col-12 text-secondary text-small my-1">
-                    <img src="/icons/icon-location.png" style="width: 32px;height: 28px;">
+                    <img src="../../static/icons/icon-location.png"
+                         th:src="@{/icons/icon-location.png}"
+                         style="width: 32px;height: 28px;">
                     <small>&nbsp;Universität Düsseldorf, Gebäude 25.22 U1</small>
                 </div>
             </div>
